--- a/MVVM_Example/app/src/main/res/layout/activity_main.xml
+++ b/MVVM_Example/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".mvvm_example.MainActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
