--- a/MVVM_Example/app/src/main/res/layout/activity_mvvm_retrofit_room.xml
+++ b/MVVM_Example/app/src/main/res/layout/activity_mvvm_retrofit_room.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".simple_retrofit_example.RetrofitExamleActivity">
+    tools:context=".mvvm_retrofit_room_example.MvvmRetrofitRoomActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
