--- a/MVVM_Example/app/src/main/res/layout/activity_mvvm_retrofit_room.xml
+++ b/MVVM_Example/app/src/main/res/layout/activity_mvvm_retrofit_room.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context=".mvvm_retrofit_room_example.MvvmRetrofitRoomActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ProgressBar
+        android:id="@+id/pvLoading"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:indicatorColor="@android:color/black" />
+</LinearLayout>
